change img to cat jpeg and paragraph

--- a/githubgit/index.html
+++ b/githubgit/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
   <h1>Diego Kennedy</h1>
-  <img src="img/lhasa.jpg" alt="imagem cachorro">
+  <img src="img/gato.jpg" alt="imagem cachorro">
+
+  <p>teste de merge e resoluçao de conflitos possiveis</p>
 </body>
 </html>
