--- a/html/index.html
+++ b/html/index.html
@@ -62,6 +62,18 @@
         </tr>
     </tbody>
     </table>
+
+    <h2>Formularios</h2>
+    <form action="#" method="post">
+        <label for="name"> Nome Completo</label>
+        <input type="text" name="name" id="name">
+        <br>
+        <label for="email">Email</label>
+        <input type="text" name="email" id="email">
+        <br>
+        <input type="submit" name="enviar" id="">
+
+    </form>
     <script src="script/app.js"></script>
 
 </body>
