added radio button forcacao status

--- a/html/formulario-curriculo/index.html
+++ b/html/formulario-curriculo/index.html
@@ -139,14 +139,13 @@
 
                 <label label for="instituicao">Institução</label>
                 <input type="text" name="instituicao">
+                <br> <br>
 
                 <label for="situacao">Situação</label>
-                <select name="situacao" required>
-                    <option value="">Selecione</option>
-                    <option value="cur">cursando</option>
-                    <option value="JRS">concluido</option>
-                    <option value="MA">Trancado</option>
-                </select>
+                <input type="radio" name="situacao"> cursando
+                <input type="radio" name="situacao"> concluido
+                <input type="radio" name="situacao"> Trancado
+                <br><br>
 
                 <label label for="data_inicial">Data inicial</label>
                 <input type="date" name="data_inicial">
