added piano img to hobbies

--- a/html/semantica-html/pag4.html
+++ b/html/semantica-html/pag4.html
@@ -34,6 +34,10 @@
                 Gostaria de enfatizar que a determinação clara de objetivos obstaculiza a apreciação da importância do remanejamento dos 
                 <em>quadros funcionais.</em>
             </p>
+            <figure>
+                <img src="img4/pexels-pixabay-164737.jpg" alt="Trulli" style="width:20%">
+                <figcaption>Fig.1 - Trulli, Puglia, Italy.</figcaption>
+              </figure>
             <hr><hr>
             <h2>Caminhar</h2>
             <small>Caminhar com meu cachorro</small>
